rabbitParser.py
# Generated from rabbit.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class rabbitParser ( Parser ):

    grammarFileName = "rabbit.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'reset'", "'print '", "'int '", "' '", 
                     "'bool '", "'{'", "'}'", "'if '", "'?'", "'endif'", 
                     "'else'", "'for'", "'endfor'", "'getX'", "'getY'", 
                     "'angle '", "'90'", "'180'", "'270'", "'360'", "'setview '", 
                     "'spaceLeft'", "'checkField'", "'putItem'", "'getItem'", 
                     "'getAngle'", "'jump '", "'sleep '", "'go '", "'home'", 
                     "'<'", "'>'", "'=='", "'!='", "'<='", "'>='", "' and '", 
                     "' or '", "'*'", "'/'", "'+'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "KATY", "INT", 
                      "TRUE", "FALSE", "STRING", "WS" ]

    RULE_prog = 0
    RULE_cmd = 1
    RULE_restart = 2
    RULE_print = 3
    RULE_declaration = 4
    RULE_block = 5
    RULE_if = 6
    RULE_for = 7
    RULE_comparison = 8
    RULE_getX = 9
    RULE_getY = 10
    RULE_setValue = 11
    RULE_angle = 12
    RULE_setView = 13
    RULE_spaceLeft = 14
    RULE_checkField = 15
    RULE_putItem = 16
    RULE_getItem = 17
    RULE_getAngle = 18
    RULE_jump = 19
    RULE_sleep = 20
    RULE_go = 21
    RULE_home = 22
    RULE_comparisonOperator = 23
    RULE_name = 24
    RULE_value = 25
    RULE_expr = 26

    ruleNames =  [ "prog", "cmd", "restart", "print", "declaration", "block", 
                   "if", "for", "comparison", "getX", "getY", "setValue", 
                   "angle", "setView", "spaceLeft", "checkField", "putItem", 
                   "getItem", "getAngle", "jump", "sleep", "go", "home", 
                   "comparisonOperator", "name", "value", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    KATY=43
    INT=44
    TRUE=45
    FALSE=46
    STRING=47
    WS=48

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self):
            return self.getTypedRuleContext(rabbitParser.CmdContext,0)


        def getRuleIndex(self):
            return rabbitParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = rabbitParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.cmd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rabbitParser.RULE_cmd

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CommandContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rabbitParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def go(self):
            return self.getTypedRuleContext(rabbitParser.GoContext,0)

        def jump(self):
            return self.getTypedRuleContext(rabbitParser.JumpContext,0)

        def home(self):
            return self.getTypedRuleContext(rabbitParser.HomeContext,0)

        def angle(self):
            return self.getTypedRuleContext(rabbitParser.AngleContext,0)

        def setView(self):
            return self.getTypedRuleContext(rabbitParser.SetViewContext,0)

        def for_(self):
            return self.getTypedRuleContext(rabbitParser.ForContext,0)

        def getX(self):
            return self.getTypedRuleContext(rabbitParser.GetXContext,0)

        def getY(self):
            return self.getTypedRuleContext(rabbitParser.GetYContext,0)

        def getAngle(self):
            return self.getTypedRuleContext(rabbitParser.GetAngleContext,0)

        def getItem(self):
            return self.getTypedRuleContext(rabbitParser.GetItemContext,0)

        def putItem(self):
            return self.getTypedRuleContext(rabbitParser.PutItemContext,0)

        def checkField(self):
            return self.getTypedRuleContext(rabbitParser.CheckFieldContext,0)

        def spaceLeft(self):
            return self.getTypedRuleContext(rabbitParser.SpaceLeftContext,0)

        def sleep(self):
            return self.getTypedRuleContext(rabbitParser.SleepContext,0)

        def print_(self):
            return self.getTypedRuleContext(rabbitParser.PrintContext,0)

        def restart(self):
            return self.getTypedRuleContext(rabbitParser.RestartContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommand" ):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)


    class IfBlockContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rabbitParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_(self):
            return self.getTypedRuleContext(rabbitParser.IfContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfBlock" ):
                listener.enterIfBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfBlock" ):
                listener.exitIfBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfBlock" ):
                return visitor.visitIfBlock(self)
            else:
                return visitor.visitChildren(self)


    class ReassignmentContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rabbitParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def setValue(self):
            return self.getTypedRuleContext(rabbitParser.SetValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReassignment" ):
                listener.enterReassignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReassignment" ):
                listener.exitReassignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReassignment" ):
                return visitor.visitReassignment(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationExprContext(CmdContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a rabbitParser.CmdContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def declaration(self):
            return self.getTypedRuleContext(rabbitParser.DeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarationExpr" ):
                listener.enterDeclarationExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarationExpr" ):
                listener.exitDeclarationExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarationExpr" ):
                return visitor.visitDeclarationExpr(self)
            else:
                return visitor.visitChildren(self)



    def cmd(self):

        localctx = rabbitParser.CmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cmd)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.go()
                pass

            elif la_ == 2:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.jump()
                pass

            elif la_ == 3:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.home()
                pass

            elif la_ == 4:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.angle()
                pass

            elif la_ == 5:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.setView()
                pass

            elif la_ == 6:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 61
                self.for_()
                pass

            elif la_ == 7:
                localctx = rabbitParser.IfBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 62
                self.if_()
                pass

            elif la_ == 8:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 63
                self.getX()
                pass

            elif la_ == 9:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 64
                self.getY()
                pass

            elif la_ == 10:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 65
                self.getAngle()
                pass

            elif la_ == 11:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 66
                self.getItem()
                pass

            elif la_ == 12:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 67
                self.putItem()
                pass

            elif la_ == 13:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 68
                self.checkField()
                pass

            elif la_ == 14:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 69
                self.spaceLeft()
                pass

            elif la_ == 15:
                localctx = rabbitParser.ReassignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 70
                self.setValue()
                pass

            elif la_ == 16:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 16)
                self.state = 71
                self.sleep()
                pass

            elif la_ == 17:
                localctx = rabbitParser.DeclarationExprContext(self, localctx)
                self.enterOuterAlt(localctx, 17)
                self.state = 72
                self.declaration()
                pass

            elif la_ == 18:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 18)
                self.state = 73
                self.sleep()
                pass

            elif la_ == 19:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 19)
                self.state = 74
                self.print_()
                pass

            elif la_ == 20:
                localctx = rabbitParser.CommandContext(self, localctx)
                self.enterOuterAlt(localctx, 20)
                self.state = 75
                self.restart()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rabbitParser.RULE_restart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRestart" ):
                listener.enterRestart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRestart" ):
                listener.exitRestart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestart" ):
                return visitor.visitRestart(self)
            else:
                return visitor.visitChildren(self)




    def restart(self):

        localctx = rabbitParser.RestartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_restart)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(rabbitParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(rabbitParser.ExprContext,0)


        def getRuleIndex(self):
            return rabbitParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = rabbitParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(rabbitParser.T__1)
            self.state = 81
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(rabbitParser.NameContext,0)


        def expr(self):
            return self.getTypedRuleContext(rabbitParser.ExprContext,0)


        def TRUE(self):
            return self.getToken(rabbitParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(rabbitParser.FALSE, 0)

        def comparison(self):
            return self.getTypedRuleContext(rabbitParser.ComparisonContext,0)


        def getRuleIndex(self):
            return rabbitParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = rabbitParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.match(rabbitParser.T__2)
                self.state = 84
                self.name()
                self.state = 85
                self.match(rabbitParser.T__3)
                self.state = 86
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(rabbitParser.T__4)
                self.state = 89
                self.name()
                self.state = 90
                self.match(rabbitParser.T__3)
                self.state = 91
                _la = self._input.LA(1)
                if not(_la==45 or _la==46):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.match(rabbitParser.T__4)
                self.state = 94
                self.name()
                self.state = 95
                self.match(rabbitParser.T__3)
                self.state = 96
                self.comparison()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cmd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rabbitParser.CmdContext)
            else:
                return self.getTypedRuleContext(rabbitParser.CmdContext,i)


        def getRuleIndex(self):
            return rabbitParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = rabbitParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(rabbitParser.T__5)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 140739633860910) != 0):
                self.state = 101
                self.cmd()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(rabbitParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison(self):
            return self.getTypedRuleContext(rabbitParser.ComparisonContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rabbitParser.BlockContext)
            else:
                return self.getTypedRuleContext(rabbitParser.BlockContext,i)


        def getRuleIndex(self):
            return rabbitParser.RULE_if

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)




    def if_(self):

        localctx = rabbitParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_if)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.match(rabbitParser.T__7)
                self.state = 110
                self.comparison()
                self.state = 111
                self.match(rabbitParser.T__8)
                self.state = 112
                self.block()
                self.state = 113
                self.match(rabbitParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(rabbitParser.T__7)
                self.state = 116
                self.comparison()
                self.state = 117
                self.match(rabbitParser.T__8)
                self.state = 118
                self.block()
                self.state = 119
                self.match(rabbitParser.T__10)
                self.state = 120
                self.block()
                self.state = 121
                self.match(rabbitParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(rabbitParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(rabbitParser.BlockContext,0)


        def getRuleIndex(self):
            return rabbitParser.RULE_for

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)




    def for_(self):

        localctx = rabbitParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(rabbitParser.T__11)
            self.state = 126
            self.expr()
            self.state = 127
            self.block()
            self.state = 128
            self.match(rabbitParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparisonOperator(self):
            return self.getTypedRuleContext(rabbitParser.ComparisonOperatorContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rabbitParser.ExprContext)
            else:
                return self.getTypedRuleContext(rabbitParser.ExprContext,i)


        def comparison(self):
            return self.getTypedRuleContext(rabbitParser.ComparisonContext,0)


        def getRuleIndex(self):
            return rabbitParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = rabbitParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comparison)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.expr()
                self.state = 131
                self.comparisonOperator()
                self.state = 134
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 132
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 133
                    self.comparison()
                    pass


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetXContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rabbitParser.RULE_getX

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetX" ):
                listener.enterGetX(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetX" ):
                listener.exitGetX(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGetX" ):
                return visitor.visitGetX(self)
            else:
                return visitor.visitChildren(self)




    def getX(self):

        localctx = rabbitParser.GetXContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_getX)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(rabbitParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetYContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rabbitParser.RULE_getY

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGetY" ):
                listener.enterGetY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGetY" ):
                listener.exitGetY(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGetY" ):
                return visitor.visitGetY(self)
            else:
                return visitor.visitChildren(self)




    def getY(self):

        localctx = rabbitParser.GetYContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_getY)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(rabbitParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(rabbitParser.NameContext,0)


        def expr(self):
            return self.getTypedRuleContext(rabbitParser.ExprContext,0)


        def TRUE(self):
            return self.getToken(rabbitParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(rabbitParser.FALSE, 0)

        def comparison(self):
            return self.getTypedRuleContext(rabbitParser.ComparisonContext,0)


        def getRuleIndex(self):
            return rabbitParser.RULE_setValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetValue" ):
                listener.enterSetValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetValue" ):
                listener.exitSetValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetValue" ):
                return visitor.visitSetValue(self)
            else:
                return visitor.visitChildren(self)




    def setValue(self):

        localctx = rabbitParser.SetValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_setValue)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.name()
                self.state = 144
                self.match(rabbitParser.T__3)
                self.state = 145
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.name()
                self.state = 148
                self.match(rabbitParser.T__3)
                self.state = 149
                _la = self._input.LA(1)
                if not(_la==45 or _la==46):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.name()
                self.state = 152
                self.match(rabbitParser.T__3)
                self.state = 153
                self.comparison()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AngleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return rabbitParser.RULE_angle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAngle" ):
                listener.enterAngle(self)
